SERVER-11214 drop_sharded_db.js (sharding_auth) failed on Linux 64-bit DEBUG

Fix race in ClientCursor::invalidate